# autofish

./: .gitignore  README.md  licence.txt  setup.cfg
.github/workflows/: python-publish.yml
autofish/: __init__.py  __main__.py  autofish_gui.py  automator.py  coordinator.py  imager.py
autofish/Arduino_TTL_sync/: Arduino_TTL_sync.ino
configs/: TTL_trigger_config.json  experiment_config__DEMO-fast.yaml  experiment_config__seqFISH-CLASSIC-SABER.yaml  experiment_config__seqFISH-DAPI.yaml  microscope_config__Nikon-Ti.yaml  microscope_config__NikonTi_Cy3-Cy5-DAPI.yaml  microscope_config__NikonTi_Cy3-Cy5.yaml  system_config.json  system_config__flow-sensor-en.json  system_config__flow-sensor-fr.json  system_config__outlet-valve.json  system_config__pump-LONGER.json  system_config__pump-MZR-gear.json  system_config__pump-REGLO.json  system_config_pump-LONGER.json  system_config_pump-Longer_sensor-en_TTL.json  system_config_pump-Longer_sensor-fr.json  system_config_pump-MZR-gear.json  system_config_pump-REGLO.json  system_config_pump_MZR-gear.json
demo/: PositionList-demo.pos  TTL_trigger_config.json  acquisition_start.txt  experiment_config__demo.yaml  microscope_config__MM-demo.yaml  system_config__demo.json
docs/: autofish_manual.docx  workflow.md
hardware-tests/: arduino_TTL_synchronization.py  pump-longer-bt100.py  robot-genmitsu.py  valve-amc-rvm.py  valve-hamilton-MVP.py
tests/: pump-longer.py
