[metadata]
name = autofish
version = 0.0.1
author = Florian Mueller
author_email = fmueller@pasteur.fr
url = https://github.com/fish-quant/autofish
description = Control of automated fluidics system
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.7
install_requires =
    pyserial
    PySimpleGUI
    pyyaml
    pycromanager

[options.extras_require]
pycromanager = pycromanager


[options.entry_points]
console_scripts = 
    autofish = autofish.autofish_gui:main
